# habs-extra

./: .gitignore  README.md  cblrepo.db  makeahpkg
patches/: http-conduit.cabal  mighttpd2.pkgbuild  snap.cabal  wai-extra.cabal  webkit.pkgbuild  xml-conduit.cabal  yesod-form.cabal  zeromq-haskell.pkgbuild
