--- snap.cabal.orig	2012-07-10 15:15:06.287213844 +0200
+++ snap.cabal	2012-07-10 15:15:14.267488803 +0200
@@ -138,7 +138,7 @@
     pwstore-fast              >= 2.2      && < 2.3,
     snap-core                 >= 0.9      && < 0.10,
     snap-server               >= 0.9      && < 0.10,
-    stm                       >= 2.2      && < 2.4,
+    stm                       >= 2.2      && < 2.4.1,
     syb                       >= 0.1      && < 0.4,
     template-haskell          >= 2.2      && < 2.8,
     text                      >= 0.11     && < 0.12,
