--- snap.cabal.orig	2012-07-21 19:04:24.268688863 +0200
+++ snap.cabal	2012-07-21 19:05:13.660388057 +0200
@@ -140,7 +140,7 @@
     pwstore-fast              >= 2.2      && < 2.3,
     snap-core                 >= 0.9.0    && < 0.10,
     snap-server               >= 0.9.0    && < 0.10,
-    stm                       >= 2.2      && < 2.4,
+    stm                       >= 2.2      && < 2.4.1,
     syb                       >= 0.1      && < 0.4,
     template-haskell          >= 2.2      && < 2.8,
     text                      >= 0.11     && < 0.12,
