--- wai-extra.cabal.orig	2012-06-27 00:24:10.500178377 +0200
+++ wai-extra.cabal	2012-06-27 00:24:19.463821443 +0200
@@ -32,7 +32,7 @@
                    , http-types                >= 0.6      && < 0.7
                    , text                      >= 0.7      && < 0.12
                    , case-insensitive          >= 0.2
-                   , data-default              >= 0.3      && < 0.5
+                   , data-default              >= 0.3      && < 0.5.1
                    , fast-logger               >= 0.0.2
                    , conduit                   >= 0.4      && < 0.5
                    , zlib-conduit              >= 0.4      && < 0.5
